# battleship

./: CMakeLists.txt  LICENSE  README.md
battleshipGame/: ai.c  ai.h  battleshipCmdl.c  common.h  position.c  position.h  randomGen.c  randomGen.h  ship.c  ship.h  util.c  util.h
battleshipLib/: ai.c  battleshipLib.c  battleshipLib.h  common.h  position.h  randomGen.c  randomGen.h  ship.c  ship.h  util.c  util.h
battleshipTest/: testFramework.c  testFramework.h  testGameCmdl.c  unittests.c  unittests.h
include/: ship.h
src/: battleship.c  ship.c
